--- a/source/uwp/ObjectModelProjection/ObjectModelProjection.vcxproj.filters
+++ b/source/uwp/ObjectModelProjection/ObjectModelProjection.vcxproj.filters
@@ -17,6 +17,7 @@
     <ClCompile Include="..\..\shared\cpp\ObjectModel\Fact.cpp" />
     <ClCompile Include="..\..\shared\cpp\ObjectModel\FactSet.cpp" />
     <ClCompile Include="..\..\shared\cpp\ObjectModel\ImageSet.cpp" />
+    <ClCompile Include="..\..\shared\cpp\ObjectModel\InputText.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\shared\cpp\ObjectModel\AdaptiveCard.h" />
@@ -39,6 +40,8 @@
     <ClInclude Include="..\..\shared\cpp\ObjectModel\FactSet.h" />
     <ClInclude Include="..\..\shared\cpp\ObjectModel\HostOptions.h" />
     <ClInclude Include="..\..\shared\cpp\ObjectModel\pch.h" />
+    <ClInclude Include="..\..\shared\cpp\ObjectModel\ImageSet.h" />
+    <ClInclude Include="..\..\shared\cpp\ObjectModel\InputText.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="json">
