--- a/source/uwp/Renderer/XamlCardRenderer.vcxproj.filters
+++ b/source/uwp/Renderer/XamlCardRenderer.vcxproj.filters
@@ -40,6 +40,7 @@
     <ClCompile Include="lib\AdaptiveShowCardOptions.cpp" />
     <ClCompile Include="lib\AdaptiveFactSetOptions.cpp" />
     <ClCompile Include="lib\AdaptiveInputText.cpp" />
+    <ClCompile Include="lib\AdaptiveInputToggle.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="lib\AdaptiveCard.h" />
@@ -89,6 +90,7 @@
     <ClInclude Include="lib\AdaptiveShowCardOptions.h" />
     <ClInclude Include="lib\AdaptiveFactSetOptions.h" />
     <ClInclude Include="lib\AdaptiveInputText.h" />
+    <ClInclude Include="lib\AdaptiveInputToggle.h" />
   </ItemGroup>
   <ItemGroup>
     <Midl Include="idl\AdaptiveCards.XamlCardRenderer.idl" />
