--- a/source/uwp/ObjectModelProjection/ObjectModelProjection.vcxproj.filters
+++ b/source/uwp/ObjectModelProjection/ObjectModelProjection.vcxproj.filters
@@ -19,6 +19,7 @@
     <ClCompile Include="..\..\shared\cpp\ObjectModel\ImageSet.cpp" />
     <ClCompile Include="..\..\shared\cpp\ObjectModel\InputText.cpp" />
     <ClCompile Include="..\..\shared\cpp\ObjectModel\InputToggle.cpp" />
+    <ClCompile Include="..\..\shared\cpp\ObjectModel\InputDate.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\shared\cpp\ObjectModel\AdaptiveCard.h" />
@@ -44,6 +45,7 @@
     <ClInclude Include="..\..\shared\cpp\ObjectModel\ImageSet.h" />
     <ClInclude Include="..\..\shared\cpp\ObjectModel\InputText.h" />
     <ClInclude Include="..\..\shared\cpp\ObjectModel\InputToggle.h" />
+    <ClInclude Include="..\..\shared\cpp\ObjectModel\InputDate.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="json">
