--- a/source/uwp/Renderer/XamlCardRenderer.vcxproj
+++ b/source/uwp/Renderer/XamlCardRenderer.vcxproj
@@ -140,6 +140,7 @@
     <ClInclude Include="lib\AdaptiveImageSizeOptions.h" />
     <ClInclude Include="lib\AdaptiveInputDate.h" />
     <ClInclude Include="lib\AdaptiveInputText.h" />
+    <ClInclude Include="lib\AdaptiveInputTime.h" />
     <ClInclude Include="lib\AdaptiveInputToggle.h" />
     <ClInclude Include="lib\AdaptiveNumberInputOptions.h" />
     <ClInclude Include="lib\AdaptiveSeparationOptions.h" />
@@ -187,6 +188,7 @@
     <ClCompile Include="lib\AdaptiveImageSizeOptions.cpp" />
     <ClCompile Include="lib\AdaptiveInputDate.cpp" />
     <ClCompile Include="lib\AdaptiveInputText.cpp" />
+    <ClCompile Include="lib\AdaptiveInputTime.cpp" />
     <ClCompile Include="lib\AdaptiveInputToggle.cpp" />
     <ClCompile Include="lib\AdaptiveNumberInputOptions.cpp" />
     <ClCompile Include="lib\AdaptiveSeparationOptions.cpp" />
